force-app/main/default/objects/Position__c/fields/PL_Commodity__c.field-meta.xml
<CustomField>
    <fullName>PL_Commodity__c</fullName>
    <label>PL Commodity</label>
    <precision>6</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>