force-app/main/default/objects/Position__c/fields/PL_Demand__c.field-meta.xml
<CustomField>
    <fullName>PL_Demand__c</fullName>
    <label>PL Demand</label>
    <precision>6</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>