force-app/main/default/objects/Position__c/fields/PL_Demand_Wacog__c.field-meta.xml
<CustomField>
    <fullName>PL_Demand_Wacog__c</fullName>
    <label>PL Demand Wacog</label>
    <precision>6</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>