force-app/main/default/objects/Position__c/fields/Position_Autonumber__c.field-meta.xml
<CustomField>
    <fullName>Position_Autonumber__c</fullName>
    <displayFormat>{0}</displayFormat>
    <label>Position Autonumber</label>
    <type>AutoNumber</type>
</CustomField>