force-app/main/default/objects/Position__c/fields/Premise_Margin__c.field-meta.xml
<CustomField>
    <fullName>Premise_Margin__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Premise Margin</label>
    <referenceTo>Premise_Margin__c</referenceTo>
    <relationshipLabel>Positions</relationshipLabel>
    <relationshipName>Positions</relationshipName>
    <type>Lookup</type>
</CustomField>