force-app/main/default/objects/Position__c/fields/Remaining_Unapplied_Volume__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Unapplied_Volume__c</fullName>
    <label>Remaining Unapplied Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>