force-app/main/default/objects/Position__c/fields/Reversal_Required__c.field-meta.xml
<CustomField>
    <fullName>Reversal_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reversal Required</label>
    <type>Checkbox</type>
</CustomField>