force-app/main/default/objects/Position__c/fields/Royalty_Distribution_Flat_Fee__c.field-meta.xml
<CustomField>
    <fullName>Royalty_Distribution_Flat_Fee__c</fullName>
    <label>Royalty Distribution Flat Fee</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>