force-app/main/default/objects/Position__c/fields/Storage_Effect__c.field-meta.xml
<CustomField>
    <fullName>Storage_Effect__c</fullName>
    <label>Storage Effect</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>