force-app/main/default/objects/Position__c/fields/Swing_Cost__c.field-meta.xml
<CustomField>
    <fullName>Swing_Cost__c</fullName>
    <description>swing cost per Dth</description>
    <inlineHelpText>swing cost per Dth</inlineHelpText>
    <label>Swing Cost</label>
    <precision>6</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>