force-app/main/default/objects/Position__c/fields/Temp_NL__c.field-meta.xml
<CustomField>
    <fullName>Temp_NL__c</fullName>
    <label>Temp NL</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>