force-app/main/default/objects/Position__c/fields/Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost__c</fullName>
    <formula>if ( 
  and(NYMEX_lock__c , Basis_Lock__c ), 
  (DT_Basis__c + DT_Basis_Physical__c + DT_NYMEX__c + Adder__c), 

  if ( 
    Basis_Lock__c, 
    (DT_Basis__c + DT_Basis_Physical__c + Adder__c), 
    Adder__c 
  ) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>basis + nymex + adder</inlineHelpText>
    <label>Total Cost</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>