force-app/main/default/objects/Position__c/fields/Total_Payment_for_supplier_payments__c.field-meta.xml
<CustomField>
    <fullName>Total_Payment_for_supplier_payments__c</fullName>
    <label>Total Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>