force-app/main/default/objects/Position__c/fields/Transaction_Date__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Date__c</fullName>
    <description>what is the date this trigger transaction occurred?</description>
    <inlineHelpText>what is the date this trigger transaction occurred?</inlineHelpText>
    <label>Transaction Date</label>
    <type>Date</type>
</CustomField>