force-app/main/default/objects/Position__c/fields/Transfer_Adder__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Adder__c</fullName>
    <description>transfer pricing with CES trading desk</description>
    <inlineHelpText>transfer pricing with CES trading desk</inlineHelpText>
    <label>Transfer Adder</label>
    <precision>16</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>