force-app/main/default/objects/Position__c/fields/Transfer_BasisF__c.field-meta.xml
<CustomField>
    <fullName>Transfer_BasisF__c</fullName>
    <description>transfer pricing with CES trading desk</description>
    <inlineHelpText>transfer pricing with CES trading desk</inlineHelpText>
    <label>Transfer BasisF</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>