force-app/main/default/objects/Position__c/fields/Transport_Rate__c.field-meta.xml
<CustomField>
    <fullName>Transport_Rate__c</fullName>
    <label>Transport Rate</label>
    <precision>9</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>