force-app/main/default/objects/Position__c/fields/Trigger_Originated_From_Safari__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Originated_From_Safari__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trigger Originated From Safari</label>
    <type>Checkbox</type>
</CustomField>