force-app/main/default/objects/Position__c/fields/Triggered_Contract_Detail__c.field-meta.xml
<CustomField>
    <fullName>Triggered_Contract_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Triggered Contract Detail</label>
    <referenceTo>Position__c</referenceTo>
    <relationshipLabel>Triggers</relationshipLabel>
    <relationshipName>Positions3</relationshipName>
    <type>Lookup</type>
</CustomField>