force-app/main/default/objects/Position__c/fields/Triggered_Sales_Price__c.field-meta.xml
<CustomField>
    <fullName>Triggered_Sales_Price__c</fullName>
    <formula>IF(ISBLANK(Floating_Component_Contract_Detail__c)
  , null
  , BLANKVALUE(Customer_Price__c, 0) 
    + BLANKVALUE(Floating_Component_Contract_Detail__r.Customer_Price__c, 0)
)</formula>
    <label>Triggered Sales Price</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>