force-app/main/default/objects/Position__c/fields/Under_LDC_Fuel_Rate__c.field-meta.xml
<CustomField>
    <fullName>Under_LDC_Fuel_Rate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Under LDC Fuel Rate</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Index__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>Index__c.Fuel_Rate__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>Index__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Utility</value>
        </filterItems>
        <infoMessage>Please select an active Utility Fuel rate</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Index__c</referenceTo>
    <relationshipLabel>Positions (Under LDC Fuel Rate)</relationshipLabel>
    <relationshipName>PositionsKaMp</relationshipName>
    <type>Lookup</type>
</CustomField>