force-app/main/default/objects/Position__c/fields/Usage_for_supplier_payments__c.field-meta.xml
<CustomField>
    <fullName>Usage_for_supplier_payments__c</fullName>
    <description>Billed electric usage in kWh.</description>
    <inlineHelpText>Billed electric usage in kWh.</inlineHelpText>
    <label>Volume (kWh)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>