force-app/main/default/objects/Position__c/fields/Volume__c.field-meta.xml
<CustomField>
    <fullName>Volume__c</fullName>
    <description>Dth</description>
    <inlineHelpText>Dth</inlineHelpText>
    <label>Volume (Dth)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>