force-app/main/default/objects/Position__c/fields/Volume_Formula_Daily_for_TC__c.field-meta.xml
<CustomField>
    <fullName>Volume_Formula_Daily_for_TC__c</fullName>
    <formula>IF ( ISPICKVAL( CES_Contract__r.MDQ_Unit__c , &#39;Therm&#39;)
  , Volume_Formula_Daily__c * 10
  , Volume_Formula_Daily__c
)</formula>
    <label>Volume Formula Daily for TC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>