force-app/main/default/objects/Position__c/fields/Volume_Formula_Daily_Round__c.field-meta.xml
<CustomField>
    <fullName>Volume_Formula_Daily_Round__c</fullName>
    <formula>ROUND(IF( Volume_Frequency__c == &#39;Daily&#39;
, Volume__c 
, Volume__c  /  
IF(
MOD(YEAR( Contract_Month__c ), 4 ) = 0 
&amp;&amp; MONTH( Contract_Month__c ) = 2, 
29,
CASE( MONTH( Contract_Month__c ), 
1, 31, 
2, 28,
3,31,
4,30,
5,31,
6,30,
7,31,
8,31,
9,30,
10,31,
11,30,
12,31,
1) 
)
)
,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Volume Formula Daily Round</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>