force-app/main/default/objects/Position__c/fields/Volume_Formula_for_TC__c.field-meta.xml
<CustomField>
    <fullName>Volume_Formula_for_TC__c</fullName>
    <formula>IF ( Volume_Frequency__c == &#39;Daily&#39;
  ,  Volume_Formula_Daily_for_TC__c 
  ,  Volume_Formula_Monthly_for_TC__c 
)</formula>
    <label>Volume Formula for TC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>