force-app/main/default/objects/Position__c/fields/Volume_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Volume_Frequency__c</fullName>
    <formula>IF(ISBLANK(CES_Contract__c)
  , TEXT(Contract_APO__r.CESContract__r.Volume_Entry_Type__c)
  , TEXT(CES_Contract__r.Volume_Entry_Type__c)
)</formula>
    <label>Volume Frequency</label>
    <type>Text</type>
</CustomField>