force-app/main/default/objects/Position__c/fields/Volume_Frequency_New__c.field-meta.xml
<CustomField>
    <fullName>Volume_Frequency_New__c</fullName>
    <description>only set for new positions needing daily allocation.  cleared out by process builder</description>
    <inlineHelpText>only set for new positions needing daily allocation.  cleared out by process builder</inlineHelpText>
    <label>Volume Frequency New</label>
    <length>100</length>
    <type>Text</type>
</CustomField>