force-app/main/default/objects/Position__c/fields/Volume_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Volume_Requirement__c</fullName>
    <label>Volume Requirement</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>