force-app/main/default/objects/Position__c/fields/Weatherized_Volume__c.field-meta.xml
<CustomField>
    <fullName>Weatherized_Volume__c</fullName>
    <label>Weatherized Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>