force-app/main/default/objects/Position__c/fields/Zero_Index_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Zero_Index_Pricing__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>select if index is 0 or &quot;no rate&quot;.  Index should not be selected</inlineHelpText>
    <label>Zero Index Pricing</label>
    <type>Checkbox</type>
</CustomField>