force-app/main/default/objects/Position__c/recordTypes/Electric_Payment.recordType-meta.xml
<RecordType>
    <fullName>Electric_Payment</fullName>
    <active>true</active>
    <label>Electric Payment</label>
</RecordType>