force-app/main/default/objects/Position__c/recordTypes/Gas_Converted_Component_Position.recordType-meta.xml
<RecordType>
    <fullName>Gas_Converted_Component_Position</fullName>
    <active>true</active>
    <label>Gas Converted Component Position</label>
</RecordType>