force-app/main/default/objects/Position__c/recordTypes/Gas_Fixed_Position.recordType-meta.xml
<RecordType>
    <fullName>Gas_Fixed_Position</fullName>
    <active>true</active>
    <label>Gas Fixed Position</label>
</RecordType>