force-app/main/default/objects/Position__c/recordTypes/Gas_Floating_Component_Position.recordType-meta.xml
<RecordType>
    <fullName>Gas_Floating_Component_Position</fullName>
    <active>true</active>
    <label>Gas Floating Component Position</label>
</RecordType>