force-app/main/default/objects/Position__c/recordTypes/Gas_Index_Position.recordType-meta.xml
<RecordType>
    <fullName>Gas_Index_Position</fullName>
    <active>true</active>
    <label>Gas Index Position</label>
</RecordType>