force-app/main/default/objects/Position__c/recordTypes/Gas_Position.recordType-meta.xml
<RecordType>
    <fullName>Gas_Position</fullName>
    <active>true</active>
    <label>Gas Position</label>
</RecordType>