force-app/main/default/objects/Position__c/recordTypes/Producer_Services_Fixed_Position.recordType-meta.xml
<RecordType>
    <fullName>Producer_Services_Fixed_Position</fullName>
    <active>true</active>
    <label>Producer Services Fixed Position</label>
</RecordType>