force-app/main/default/objects/Position__c/recordTypes/Producer_Services_Fixed_Trigger.recordType-meta.xml
<RecordType>
    <fullName>Producer_Services_Fixed_Trigger</fullName>
    <active>true</active>
    <label>Producer Services Fixed Trigger</label>
</RecordType>