force-app/main/default/objects/Position__c/recordTypes/Producer_Services_Floating_Trigger.recordType-meta.xml
<RecordType>
    <fullName>Producer_Services_Floating_Trigger</fullName>
    <active>true</active>
    <label>Producer Services Floating Trigger</label>
</RecordType>