force-app/main/default/objects/Position__c/recordTypes/Producer_Services_Index_Position.recordType-meta.xml
<RecordType>
    <fullName>Producer_Services_Index_Position</fullName>
    <active>true</active>
    <label>Producer Services Index Position</label>
</RecordType>