force-app/main/default/objects/Position__c/validationRules/No_0_Payments.validationRule-meta.xml
<ValidationRule>
    <fullName>No_0_Payments</fullName>
    <active>true</active>
    <errorConditionFormula>AND(

RecordType.Name = &quot;Electric Payment&quot;,

OR( Total_Payment_for_supplier_payments__c = 0,  ISNULL(Total_Payment_for_supplier_payments__c)
)
)</errorConditionFormula>
    <errorDisplayField>Active_Contract_Pricing__c</errorDisplayField>
    <errorMessage>POS1: Electric payments must have a total value.</errorMessage>
</ValidationRule>