force-app/main/default/objects/Position__c/validationRules/Record_Locked_After_Sync.validationRule-meta.xml
<ValidationRule>
    <fullName>Record_Locked_After_Sync</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 ISPICKVAL(Safari_Sync_Status__c, &#39;Sync Complete&#39;),
 NOT(
  OR(
    CONTAINS($User.Profile_Name__c,&#39;CES Contract&#39;),
    $User.Profile_Name__c = &#39;System Administrator&#39;,
    $User.Profile_Name__c = &#39;The System&#39;
  )
 )
)</errorConditionFormula>
    <errorMessage>POS2: This record has been synced with Safari and can only be modified by a transaction analyst. Please contact your applicable transaction analyst group.</errorMessage>
</ValidationRule>